<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Meeting Scheduler</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="msg_don_t_have_an_account">Dont have an account</string>
    <string name="lbl_log_in">Login </string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_import_image">import image</string>
    <string name="msg_enter_your_email">Enter your email</string>
    <string name="msg_enter_a_password">Enter a password</string>
    <string name="msg_create_an_account">Create  an account </string>
    <string name="msg_enter_a_username">Enter a username</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_select_type">Select type</string>
    <string name="lbl_mohamed">Mohamed</string>
    <string name="msg_edit_profile_information">Update password</string>
    <string name="lbl_resend_email">Resend email</string>
    <string name="lbl_login_now">Login Now</string>
    <string name="lbl_personnel2">Personnel</string>
    <string name="lbl_messages">Messages</string>
    <string name="lbl_enseignants">Enseignants</string>
    <string name="msg_check_your_email">Check your Email</string>
    <string name="lbl_notifications">Notifications</string>
    <string name="lbl_edit_profile">Edit profile</string>
    <string name="lbl_language">Language</string>
    <string name="lbl_theme">Theme</string>
    <string name="lbl_back">Back</string>
    <string name="msg_try_another_keyword">Try another keyword</string>
    <string name="msg_we_couldn_t_find">We couldn\u2019t find the page \u2028based on your search</string>
    <string name="msg_no_results_found">No Results Found</string>
    <string name="msg_check_wifi_setting">Try again</string>
    <string name="msg_please_check_your">Please check your internet connection or try again</string>
    <string name="msg_no_internet_connection">No internet connection</string>
    <string name="date">12:00</string>
    <string name="lbl_message2">Message</string>
    <string name="lbl_follow_path">Follow path</string>
    <string name="lbl_logout">Logout</string>
    <string name="msg_your_request_has">your request has accepted by salem</string>
    <string name="lbl_menu">Menu</string>
    <string name="lbl_help_support">Help &amp; support</string>
    <string name="lbl_privacy_policy">Privacy Policy</string>
    <string name="lbl_history">Delete Account</string>
    <string name="lbl_contact_us">Contact us</string>
    <string name="lbl_light_mode">Light mode</string>
    <string name="name">Name</string>
    <string name="lbl_1_hr">12:00</string>
    <string name="lbl_repairmans">Repairmans</string>
    <string name="lbl_clients">Clients</string>
    <string name="lbl_join">Join</string>
    <string name="msg_prestataire_group">Prestataire Group</string>
    <string name="lbl_ok_done">ok done ...</string>
    <string name="lbl_etudiants">Etudiants</string>
    <string name="lbl_contact">Contact </string>
    <string name="lbl_home">Home</string>
    <string name="lbl_search">Search for a User</string>
    <string name="user_role">Deleger Section</string>
    <string name="message_create_groupe">Select an image for your groupe</string>
    <string name="description_event">Cour  d\u2019 algo en ligne Chapitre 4</string>
    <string name="titre_event">Algorithemique</string>
    <string name="lbl_heure">10:00</string>
    <string name="lbl_profile_photo">Profile photo</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="organizer">Organizer</string>
    <string name="bio_user">Etudiant Delegate</string>
    <string name="msg_already_you_have">Already you have an account? </string>
    <string name="msg_confirm_password">Confirm password</string>
    <string name="msg_enter_your_informtions">Enter your informtions</string>
    <string name="lbl_no">No</string>
    <string name="lbl_yes">Yes</string>
    <string name="msg_are_you_sure_you2">Are you sure you want to log out?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_confirm">Confirmer</string>
    <string name="msg_are_you_sure_you">Are you sure you want to delete your account? Please read how account deletion will affect.
Deleting your account removes personal information our database. Tour email becomes permanently reserved and same email cannot be re-use to register a new account.</string>
    <string name="lbl_delete_account">Delete Account</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_titre_detail">Titre</string>
    <string name="lbl_description_event">Description</string>
    <string name="lbl_logo">Meeting Schduler</string>
    <string name="lbl_welcome">Bienvenue dans</string>
    <string name="old_password">Enter the old password</string>
    <string name="new_password">Enter a new password</string>
    <string name="lbl_confirm_password">Confirm password</string>
    <string name="password_format">
        - Au moins 12 caractères\n
        - Au moins deux lettres majuscules\n
        - Au moins deux lettres minuscules\n
        - Au moins deux chiffres\n
        - Au moins deux caractères spéciaux (comme "!@#$%^"&amp;*…)\n
        - Pas d\u2019espaces ou de caractères blancs
</string>


</resources>


