<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="@dimen/_24pxh"
    android:layout_height="match_parent">


    <TextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/txtDeleteaccount"
        style="@style/txtPoppinssemibold24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ellipsize="end"
        android:lineSpacingExtra="@dimen/_12pxh"
        android:singleLine="true"
        android:text="@string/lbl_delete_account" />

    <TextView
        android:layout_marginTop="@dimen/_16pxh"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/txtDeleteaccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/txtDescription"
        style="@style/txtPoppinsregular16_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/_7pxh"
        android:text="@string/msg_are_you_sure_you" />

    <LinearLayout
        android:id="@+id/linearRowno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24pxh"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDescription">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btncancel"
            style="@style/btnSolidRoundedOutline_4"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:gravity="center"
            android:text="@string/lbl_cancel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDelete"
            style="@style/btnSolidRounded_14"
            android:layout_width="@dimen/_120pxh"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8pxh"
            android:ellipsize="end"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/lbl_delete" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
