<?xml version="1.0" encoding="UTF-8"?>
<androidx.cardview.widget.CardView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout android:id="@+id/linearMessageLogout"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
       android:padding="@dimen/_8pxh" >

        <TextView
            android:id="@+id/txtConfirmation"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/txtPoppinsmedium24_1"
            android:textAlignment="center"
            android:text="@string/msg_are_you_sure_you2"/>

        <LinearLayout
            android:id="@+id/linearRowno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_16pxh"
            android:layout_marginHorizontal="@dimen/_16pxh"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNo"
                style="@style/btnSolidRoundedOutline_2"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ellipsize="end"
                android:gravity="center"
                android:text="@string/lbl_no"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnYes"
                style="@style/btnSolidRounded_17"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ellipsize="end"
                android:layout_marginStart="@dimen/_8pxh"
                android:gravity="center"
                android:text="@string/lbl_yes"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
