<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <TextView
            android:id="@+id/textePassword"
            style="@style/txtPoppinsmedium24_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Saisie de mot de passe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/formatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16pxh"
            android:fontFamily="@font/poppins"
            android:gravity="start"
            android:letterSpacing="0.1"
            android:lineSpacingExtra="4dp"
            android:text="@string/password_format"
            android:textColor="@color/green_500"
            android:textSize="@dimen/_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textePassword" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/oldPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_54pxh"
            android:layout_marginTop="@dimen/_16pxh"
            android:hint="@string/old_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formatPassword"
            app:passwordToggleEnabled="true"

            app:passwordToggleTint="@color/indigo_900"
            app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize50Parcent">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_54pxh"
            android:layout_marginTop="@dimen/_16pxh"
            android:hint="@string/new_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/oldPassword"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/indigo_900"
            app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize50Parcent">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_54pxh"
            android:layout_marginTop="@dimen/_16pxh"
            android:hint="@string/lbl_confirm_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newPassword"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/indigo_900"
            app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize50Parcent">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearRowno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24pxh"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmPassword">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                style="@style/btnSolidRoundedOutline_4"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ellipsize="end"
                android:gravity="center"
                android:text="@string/lbl_cancel" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnConfirm"
                style="@style/btnSolidRounded_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8pxh"
                android:ellipsize="end"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/lbl_confirm" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
