<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout android:gravity="start"
        android:id="@+id/linearErrorMessage"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_16pxh" style="@style/groupStyle">
        <LinearLayout android:id="@+id/linearBacknav"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_marginStart="@dimen/_16pxv"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <ImageView android:id="@+id/imageArrowleftOne"
                android:layout_gravity="center_vertical"
                android:layout_height="@dimen/_18pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="@dimen/_18pxh"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription"
                android:src="@drawable/img_arrow_left_blue_gray_100_01"/>
            <TextView android:ellipsize="end"
                android:gravity="center_vertical"
                android:id="@+id/txtBack"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                style="@style/txtIntermedium16_1"
                android:text="@string/lbl_back"/>
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <ImageView android:id="@+id/imageErrormsgOne"
            android:layout_gravity="center"
            android:layout_height="@dimen/_287pxh"
            android:layout_width="@dimen/_168pxh"
            android:scaleType="fitXY"
            tools:ignore="ContentDescription"
            android:src="@drawable/img_error_msg_illustration_white_a700_01"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView android:id="@+id/txtNointernet"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/txtPoppinssemibold44"
            android:text="@string/msg_no_internet_connection"/>
        <TextView android:id="@+id/txtPleasecheck"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_32pxh"
            android:layout_width="match_parent"
            style="@style/txtPoppinsregular20"
            android:text="@string/msg_please_check_your"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/btnCheckWifi"
            android:layout_height="@dimen/_63pxv"
            android:layout_width="@dimen/_262pxh"
            android:letterSpacing="0.02"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline"
            android:text="@string/msg_check_wifi_setting"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
</layout>
