<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >

    <LinearLayout android:gravity="start"
        android:id="@+id/linearErrorMessage"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_32pxv"
        android:paddingEnd="@dimen/_20pxh"
        android:paddingStart="@dimen/_20pxh"
        android:paddingTop="@dimen/_32pxv" style="@style/groupStyle">
        <LinearLayout android:id="@+id/linearBacknav"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <ImageView android:id="@+id/imageArrowleftOne"
                android:layout_gravity="center_vertical"
                android:layout_height="@dimen/_18pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="@dimen/_18pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrow_left_gray_300"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrow_left_gray_300"/>
            <TextView android:ellipsize="end"
                android:gravity="center_vertical"
                android:id="@+id/txtBack"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                style="@style/txtIntermedium16_1"
                android:text="@string/lbl_back"/>
        </LinearLayout>
        <ImageView android:id="@+id/imageErrormsgOne"
            android:layout_height="@dimen/_287pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_86pxv"
            android:layout_width="@dimen/_168pxh"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_error_msg_illustration_white_a700_01_287x168}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_error_msg_illustration_white_a700_01_287x168"/>
        <TextView android:id="@+id/txtNoresults"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_42pxv"
            android:layout_width="match_parent"
            style="@style/txtPoppinssemibold44_1"
            android:text="@string/msg_no_results_found"/>
        <TextView android:ellipsize="end" android:id="@+id/txtWecouldnt"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            style="@style/txtPoppinsregular20_1"
            android:text="@string/msg_we_couldn_t_find"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBackToHome"
            style="@style/btnSolidRoundedOutline_1"
            android:layout_width="241dp"
            android:layout_height="@dimen/_63pxv"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_41pxv"
            android:layout_marginBottom="@dimen/_5pxv"
            android:ellipsize="end"
            android:gravity="center"
            android:letterSpacing="0.02"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_19pxv"
            android:singleLine="true"
            android:textAllCaps="false"
            android:text="@string/msg_try_another_keyword" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
